crates/toml/tests/snapshots/invalid/float/exp-dot-01.stderr
TOML parse error at line 1, column 17
  |
1 | exp-dot-01 = 1e2.3
  |                 ^^
invalid float, expected nothing
